# profile.ivi.ico-uxf-utilities

./: LICENSE-2.0  Makefile.am  configure.ac  ico-uxf-utilities.manifest
include/: ico_dbus_amb_efl.h  ico_log.h  ico_uws.h  ico_uws_private.h
packaging/: ico-uxf-utilities.changes  ico-uxf-utilities.spec
src/: Makefile.am  ico_dbus_amb_efl.c  ico_log.c  ico_uws.c
test/: Makefile.am  run_test.sh  run_test_ico_log.sh  tst_ico_log.c  tst_ico_uws.h  tst_ico_uws_client.c  tst_ico_uws_multi_client.c  tst_ico_uws_multi_server.c  tst_ico_uws_server.c
